# rbuild

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/: stamp-version.sh
.github/workflows/: release.yml
crates/rbuild/: Cargo.toml
crates/rbuild-proto/: Cargo.toml
crates/rbuild-proto/src/: chunk.rs  config.rs  hash.rs  lib.rs  merge.rs  proto.rs  scan.rs  transport.rs
crates/rbuild/src/: agent.rs  ancestor.rs  build.rs  connection.rs  deploy.rs  download.rs  image.rs  main.rs  service.rs  shell_hook.rs  shim.rs  sync.rs
crates/rbuildd/: Cargo.toml
crates/rbuildd/src/: build.rs  main.rs  serve.rs  sync.rs
crates/rbuildd/src/backend/: docker.rs  mod.rs
docker/: linux.Dockerfile  wine.Dockerfile
docker/wine-wrappers/: _common.sh  cargo  rustc
scripts/: build-daemon.sh
