[workspace]
resolver = "2"
members = ["crates/rbuild-proto", "crates/rbuild", "crates/rbuildd"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
rbuild-proto = { path = "crates/rbuild-proto" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1"
zstd = "0.13"
notify = "8"
notify-debouncer-full = "0.5"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
