[package]
name = "rbuild-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
blake3.workspace = true
zstd.workspace = true
ignore.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
directories.workspace = true
