[package]
name = "rbuild"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rbuild"
path = "src/main.rs"

[dependencies]
rbuild-proto.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
blake3.workspace = true
zstd.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
ignore.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
directories.workspace = true
hex.workspace = true
tar = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
